--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "antd": "^3.19.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "request": "^2.88.0",
+    "requestify": "^0.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:8888",
   "eslintConfig": {
     "extends": "react-app"
   },
